--- a/views/Banquets-page.ejs
+++ b/views/Banquets-page.ejs
@@ -28,27 +28,47 @@
             <div class="card">
                 <img src="https://gos3.ibcdn.com/bbcf972620a611ee81a80a58a9feac02.jpg" alt="BANQUET Image">
                 <div class="card-content">
-                    <h3>Heading 1</h3>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, iste tenetur! Corrupti, quia incidunt! Similique laborum praesentium blanditiis quas earum odit dolorum totam reiciendis sint eius qui doloremque, incidunt quidem delectus aut ipsum vitae nostrum? Voluptatibus eos deleniti facilis beatae?</p>
-                    <a href="#" class="btn">View Details</a>
+                    <h3>Ceremony Hotel and Banquets</h3>
+                  <p>
+                            Address: 5, Railway Rd, Fruit Garden, New Industrial Township, Faridabad, Haryana 121001.
+                            <br>
+                            Hours: Monday to Saturday: 10:00AM to 6:00PM
+                            <br>
+                            Contact: +91-98*******10
+                     
+                        
+                        <p>
+                  <a href="#" id ="cer" class="btn">View Details</a>
                 </div>
             </div>
 
             <div class="card">
                 <img src="https://ik.imagekit.io/pu0hxo64d/uploads/gallery/birthday-party-at-a1-banquet-naraina-697.jpg" alt="BANQUET Image">
                 <div class="card-content">
-                    <h3>Heading 2</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet magni accusantium, odit illo voluptatem architecto minima necessitatibus assumenda. Magnam voluptates laboriosam nobis, error enim quaerat veniam accusamus in, quos, illo esse aliquid ducimus numquam at quisquam eligendi facilis aut quae!</p>
-                    <a href="#" class="btn">View Details</a>
+                    <h3>A1 banquet</h3>
+                        <p>Address: A-1, PVR Cinema Road, near 110028, Industrial Area Phase I, Block F, Naraina Industrial Area Phase 1, Naraina, New Delhi, Delhi 110001.
+                        <br>
+                         Hours: Monday to Saturday: 10:00AM to 6:00PM
+                        <br>
+                        Contact: +91-98*******10
+                        </p>
+                        <a href="#" id="A1" class="btn">View Details</a>
                 </div>
             </div>
         
             <div class="card">
                 <img src="https://i.pinimg.com/736x/28/ad/25/28ad257a28bcd46eb4ce22d45f7183ad.jpg" alt="BANQUET Image">
                 <div class="card-content">
-                    <h3>Heading 3</h3>
-                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor soluta ut tempora explicabo esse! Facilis nesciunt voluptates reiciendis modi ut repudiandae, corrupti maxime qui et explicabo optio. Odit ullam, possimus doloremque itaque animi culpa. Assumenda, rerum? Minus recusandae dolore sint!</p>
-                    <a href="#" class="btn">View Details</a>
+                   <h3>Shagun Banquet Hall</h3>
+                        <p>
+                            Address: Geeta Colony Road, Syam Block, Seelampur, Shahdara, Gandhi Nagar, Delhi - 110031.
+                            <br>
+                             Hours: Monday to Saturday: 10:00AM to 6:00PM
+                            <br>
+                            Contact: +91-98*******10
+                        </p>
+                        
+                        <a href="#" id="sh" class="btn">View Details</a>
                 </div>
             </div>   
         </div>
