--- a/Public/styleSheets/About-Us-page.css
+++ b/Public/styleSheets/About-Us-page.css
@@ -2,13 +2,13 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif ;
     font-size: 10px;
     color: white;
 }
 
 body {
-    background-color: #dee0e3;
+    background-color: #f0f0f0;
 }
 
 header {
