--- a/Public/styleSheets/Home-page.css
+++ b/Public/styleSheets/Home-page.css
@@ -2,12 +2,12 @@
     margin: 0px;
    padding: 0px;
    box-sizing:border-box;
-   font-family: Arial, Helvetica, sans-serif;
+   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 10px;
    color:white;  
   }
    body{
-      background-color:#1c2333
+      background-color:#f0f0f0;
   } 
   
   .Header{
