--- a/views/Home-page.ejs
+++ b/views/Home-page.ejs
@@ -21,7 +21,7 @@
                         <li><a href="/profile">PROFILE</a></li>
                         <li><a href="/ngos">NGOs</a></li>
                         <li><a href="/banquets">BANQUETS</a></li>
-                        <li><a href="/aboutus">ABOUT US</a></li>
+                        <li><a href="/about">ABOUT US</a></li>
                     </ul>
                 </div>
             </nav>
