--- a/views/Login-page.ejs
+++ b/views/Login-page.ejs
@@ -41,6 +41,7 @@
               name="email"
               id="email"
               required
+              style="color:black"
             />
           </div>
           <div class="login-3">
