--- a/views/Login-page.ejs
+++ b/views/Login-page.ejs
@@ -55,6 +55,7 @@
               name="password"
               id="password"
               required
+              style="color:black"
             />
           </div>
           <p id="message"></p>
