--- a/views/Register-page.ejs
+++ b/views/Register-page.ejs
@@ -37,6 +37,7 @@
                 class="input"
                 name="firstname"
                 id="firstname"
+                style="color:black"
               />
             </div>
             <div class="register-3">
@@ -49,6 +50,7 @@
                 class="input"
                 name="lastname"
                 id="lastname"
+                style="color:black"
               />
             </div>
             <div class="register-3">
@@ -61,6 +63,7 @@
                 class="input"
                 name="email"
                 id="email"
+                style="color:black"
               />
             </div>
             <div class="register-3">
@@ -73,6 +76,7 @@
                 class="input"
                 name="phoneNumber"
                 id="phoneNumber"
+                style="color:black"
               />
             </div>
             <div class="register-3">
@@ -85,6 +89,7 @@
                 class="input"
                 name="password"
                 id="password"
+                style="color:black"
               />
             </div>
             <div class="register-3">
@@ -97,6 +102,7 @@
                 class="input"
                 name="confirmPassword"
                 id="confirmPassword"
+                style="color:black"
               />
             </div>
             <p id="message"></p>
