--- a/views/NGO-page.ejs
+++ b/views/NGO-page.ejs
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NGOs</title>
-    <link rel="stylesheet" type="text/css" href="/styleSheets/NGO-page.css" />
-   
+    <link rel="stylesheet" type="text/css" href="/Pages/NGO-page.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body>
@@ -23,40 +23,54 @@
                         <li><a href="/profile">PROFILE</a></li>
                         <li><a href="/ngos">NGOs</a></li>
                         <li><a href="/banquets">BANQUETS</a></li>
-                        <li><a href="/about">ABOUT US</a></li>
+                        <li><a href="/aboutus">ABOUT US</a></li>
                     </ul>
                 </div>
             </nav>
         </header>
         <div class="card-container">
             <div class="card">
-                <img src="https://images-platform.99static.com//NnfsZfhWECwMKeuj4yxeInkbKN8=/0x126:874x1000/fit-in/500x500/99designs-contests-attachments/35/35657/attachment_35657633"
+                <img src="https://yt3.ggpht.com/a/AATXAJxApt1P99iJ7Ui5ELUUEwpbKdcFwHBbB4a24QiS7g=s900-c-k-c0xffffffff-no-rj-mo"
                     alt="NGO Image" />
                 <div class="card-content">
-                    <h3>United Hope Foundation</h3>
-                    <p>United Hope Foundation is dedicated to creating sustainable change in underserved communities. Our initiatives focus on providing education, healthcare, and economic support to those in need. Through partnerships and community-driven programs, we aim to empower individuals and foster self-reliance. Join us in making a tangible impact and building a brighter future for all. Together, we can transform lives and communities.
+                    <h3>Feeding India</h3>
+                    <p>In January 2019, Zomato and Feeding India (registered as Hunger Heroes) collaborated to eradicate hunger and malnutrition in India.
+ All efforts are concerted towards providing better food to more people. Through our targeted interventions for child and maternal malnutrition, we are working towards bringing large-scale systemic transformation in the nutrition landscape of India.
+                        Despite the significant progress India has made, a large number of people still face the risk of food insecurity. The COVID-19 pandemic has further exacerbated the challenge of hunger in our country.
+
+                        As a response to the devastating consequences of the pandemic, Feeding India by Zomato launched the
+
+                        Daily Feeding Program in January 2021
+                        to provide daily meal support to the most vulnerable families.Under this program, Feeding India has served 4.3+ crore meals with the main focus on reducing hunger for the most vulnerable. This has been enabled with the support of over 140 NGO partners spread across 40 cities in the country.
                     </p>
                     <a href="#" id="unitedHope" class="btn">View Details</a>
                 </div>
             </div>
 
             <div class="card">
-                <img src="https://images-platform.99static.com//KEKlta8A8f-Y7LsWg86MuyDQvUA=/188x0:791x603/fit-in/500x500/99designs-contests-attachments/126/126616/attachment_126616173"
+                <img src="https://media.amway.in/sys-master/images/h21/h97/9023196069918/AkshayaPatra%20Logo_800X800%20px.jpg"
                     alt="NGO Image" />
                 <div class="card-content">
-                    <h3>Basaafar Foundation</h3>
-                    <p>Basaafar Foundation is committed to advancing social welfare through impactful community projects. Our mission includes improving access to quality education, healthcare, and sustainable livelihoods for marginalized groups. By fostering community engagement and supporting local initiatives, we strive to empower individuals and drive positive change. Partner with us to support our efforts in creating a more equitable and prosperous society for all.
+                    <h3> Akshaya Patra Foundation</h3>
+                    <p>The Akshaya Patra Foundation is a not-for-profit organisation headquartered in Bengaluru, India. The Foundation strives to eliminate classroom hunger by implementing the PM POSHAN (Mid-Day Meal) Programme. It provides nutritious meals to children studying in government schools and government-aided schools. Akshaya Patra also aims to counter malnutrition and support the Right to Education of children hailing from socio-economically challenging backgrounds.The Akshaya Patra Foundation is an independent charitable trust registered under the Indian Trusts Act 1882 (Reg. No. 154). We endeavour to implement the Government of India’s PM POSHAN Initiative (formerly the Mid-Day Meal Scheme) to solve at scale the overarching societal issues of classroom hunger and malnutrition in the country.
+
+                        It is our firm belief that investing in child nutrition and education is one of the most effective entry points for human development. Driven by this belief, we strive to provide children with a hot, nutritious and tasty mid-day meal every school day as an incentive to come to school. Thus, the vision – ‘No child in India shall be deprived of education because of hunger.’
                     </p>
                     <a href="#" id="basaafar" class="btn">View Details</a>
                 </div>
             </div>
 
             <div class="card">
-                <img src="https://www.logodesignteam.com/images/portfolio-images/non-profit-organisations-logo-design/ngo-non-profit-organisations-logo-design1.jpg"
+                <img src="https://th.bing.com/th/id/OIP.LLmH50rt_b_fMLdLfpUocwHaHa?rs=1&pid=ImgDetMain"
                     alt="NGO Image" />
                 <div class="card-content">
-                    <h3>Hope Foundation</h3>
-                    <p>Hope Foundation is dedicated to transforming lives and communities through holistic support programs. We focus on providing essential services such as education, healthcare, and disaster relief to underserved populations. Our goal is to foster sustainable development and empower individuals to break the cycle of poverty. Join us in our mission to create lasting impact and build a brighter future for all.
+                    <h3>Annamrita Foundation</h3>
+                    <p>A country cannot progress if most of its people are hungry. Today, 14% of our population is undernourished and needs our undivided attention. The only way to ensure a healthy and happy country is by nourishing the ones who need it the most. Annamrita Foundation is an NGO working with an aim to provide food-relief and nourishment to the underprivileged communities of India.
+                        At Annamrita, we exchange ‘Hunger for Hope’.
+
+                        Your charity in the form of generous donations can help Annamrita provide nutritious mid-day meals and food-relief to the children and underprivileged sections of our society.As an NGO, our values are deeply rooted into Indian traditions. Annamrita is a Sanskrit word that translates to Anna, “Food” and Amrita, “Nectar”; Food as pure as nectar.
+
+                        Founded in 2004, Annamrita Foundation has always believed that the intake of food not only sustains a person, it also paves a way for a healthy future. We strive to deliver nutritious meals to people who need it the most.
                     </p>
                     <a href="#" id="hopeFoundation" class="btn">View Details</a>
                 </div>
@@ -103,7 +117,7 @@
             </div>
         </footer>
     </div>
-    <script src="/javaScripts/NGO-page.js"></script>
+    <script src="/Pages/NGO-page.js"></script>
 </body>
 
 </html>
