--- a/views/Banquets-page.ejs
+++ b/views/Banquets-page.ejs
@@ -1,35 +1,35 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Banquets</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="/styleSheets/Banquets-page.css">
-  </head>
-  <body>
-    <div class= "main">
-    <header class="Header">
-          <div class="logo">Food Share</div>
-       <blockquote>No one has ever become poor from giving. – Anne Frank.</blockquote>
-      <nav class="nav">
-          <div class="list">
-          <ul>
-            <li><a href="/">HOME</a></li>
-            <li><a href="/profile">PROFILE</a></li>
-            <li><a href="/ngos">NGOs</a></li>
-            <li><a href="/banquets">BANQUETS</a></li> 
-            <li><a href="/about">ABOUT US</a></li>
-          </ul>
-          </div>
-      </nav>
-    </header>
-        <h1 style="color:black; font-weight: bolder; font-size: 30px;"></h1>
-        <div class="card-container">
-            <div class="card">
-                <img src="https://gos3.ibcdn.com/bbcf972620a611ee81a80a58a9feac02.jpg" alt="BANQUET Image">
-                <div class="card-content">
-                    <h3>Ceremony Hotel and Banquets</h3>
-                  <p>
+    <html lang="en">
+      <head>
+        <meta charset="UTF-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+        <title>Banquets</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet" type="text/css" href="/Pages/Banq-page.css">
+      </head>
+      <body>
+        <div class= "main">
+        <header class="Header">
+              <div class="logo">Food Share</div>
+           <blockquote>No one has ever become poor from giving. – Anne Frank.</blockquote>
+          <nav class="nav">
+              <div class="list">
+              <ul>
+                  <li><a href="/">HOME</a></li>
+                  <li><a href="/profile">PROFILE</a></li>
+                  <li><a href="/ngos">NGOs</a></li>
+                  <li><a href="/banquets">BANQUETS</a></li>
+                  <li><a href="/aboutus">ABOUT US</a></li>
+              </ul>
+              </div>
+          </nav>
+        </header>
+            <h1 style="color:black; font-weight: bolder; font-size: 30px;"></h1>
+            <div class="card-container">
+                <div class="card">
+                    <img src="https://gos3.ibcdn.com/bbcf972620a611ee81a80a58a9feac02.jpg" alt="BANQUET Image">
+                    <div class="card-content">
+                        <h3>Ceremony Hotel and Banquets</h3>
+                        <p>
                             Address: 5, Railway Rd, Fruit Garden, New Industrial Township, Faridabad, Haryana 121001.
                             <br>
                             Hours: Monday to Saturday: 10:00AM to 6:00PM
@@ -38,14 +38,14 @@
                      
                         
                         <p>
-                  <a href="#" id ="cer" class="btn">View Details</a>
+                        <a href="#" id ="cer" class="btn">View Details</a>
+                    </div>
                 </div>
-            </div>
-
-            <div class="card">
-                <img src="https://ik.imagekit.io/pu0hxo64d/uploads/gallery/birthday-party-at-a1-banquet-naraina-697.jpg" alt="BANQUET Image">
-                <div class="card-content">
-                    <h3>A1 banquet</h3>
+    
+                <div class="card">
+                    <img src="https://ik.imagekit.io/pu0hxo64d/uploads/gallery/birthday-party-at-a1-banquet-naraina-697.jpg" alt="BANQUET Image">
+                    <div class="card-content">
+                        <h3>A1 banquet</h3>
                         <p>Address: A-1, PVR Cinema Road, near 110028, Industrial Area Phase I, Block F, Naraina Industrial Area Phase 1, Naraina, New Delhi, Delhi 110001.
                         <br>
                          Hours: Monday to Saturday: 10:00AM to 6:00PM
@@ -53,13 +53,13 @@
                         Contact: +91-98*******10
                         </p>
                         <a href="#" id="A1" class="btn">View Details</a>
+                    </div>
                 </div>
-            </div>
-        
-            <div class="card">
-                <img src="https://i.pinimg.com/736x/28/ad/25/28ad257a28bcd46eb4ce22d45f7183ad.jpg" alt="BANQUET Image">
-                <div class="card-content">
-                   <h3>Shagun Banquet Hall</h3>
+            
+                <div class="card">
+                    <img src="https://i.pinimg.com/736x/28/ad/25/28ad257a28bcd46eb4ce22d45f7183ad.jpg" alt="BANQUET Image">
+                    <div class="card-content">
+                        <h3>Shagun Banquet Hall</h3>
                         <p>
                             Address: Geeta Colony Road, Syam Block, Seelampur, Shahdara, Gandhi Nagar, Delhi - 110031.
                             <br>
@@ -69,43 +69,44 @@
                         </p>
                         
                         <a href="#" id="sh" class="btn">View Details</a>
-                </div>
-            </div>   
+                    </div>
+                </div>   
+            </div>
+          <footer>
+              <div class="container">
+                  <div class="footer-content">
+                      <h3>Contact Us</h3>
+                      <p>Email: Info@example.com</p>
+                      <p>Phone: +1234567890</p>
+                      <p>Address: XYZ Street name, country</p>
+                  </div>
+                  <div class="footer-content">
+                      <h3>Quick Links</h3>
+                      <ul class="list">
+                          <li><a href="#">Home</a></li>
+                          <li><a href="#">About</a></li>
+                          <li><a href="#">Services</a></li>
+                          <li><a href="#">Help</a></li>
+                          <li><a href="#">Contact</a></li>
+                      </ul>
+                  </div>
+                  <div class="footer-content">
+                      <h3>Follow Us</h3>
+                      <ul class="social-icons">
+                          <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                          <li><a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a></li>
+                          <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                          <li><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                      </ul>
+                  </div>
+              </div>
+              <div class="bottom-bar">
+                  <p>&copy; 2024 FOODSHARE. All rights reserved</p>
+              </div>
+          </footer>
+    
         </div>
-      <footer>
-          <div class="container">
-              <div class="footer-content">
-                  <h3>Contact Us</h3>
-                  <p>Email: Info@example.com</p>
-                  <p>Phone: +1234567890</p>
-                  <p>Address: XYZ Street name, country</p>
-              </div>
-              <div class="footer-content">
-                  <h3>Quick Links</h3>
-                  <ul class="list">
-                      <li><a href="#">Home</a></li>
-                      <li><a href="#">About</a></li>
-                      <li><a href="#">Services</a></li>
-                      <li><a href="#">Help</a></li>
-                      <li><a href="#">Contact</a></li>
-                  </ul>
-              </div>
-              <div class="footer-content">
-                  <h3>Follow Us</h3>
-                  <ul class="social-icons">
-                      <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                      <li><a href="https://github.com" target="_blank"><i class="fab fa-github"></i></a></li>
-                      <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                  </ul>
-              </div>
-          </div>
-          <div class="bottom-bar">
-              <p>&copy; 2024 FOODSHARE. All rights reserved</p>
-          </div>
-      </footer>
-
-    </div>
-    </body>
-    <script type="text/javascript" src="Pages/Banq-page.js"></script>
-    </html>
+        </body>
+        <script type="text/javascript" src="Pages/Banq-page.js"></script>
+        </html>
+    
