--- a/Public/styleSheets/Banquets-page.css
+++ b/Public/styleSheets/Banquets-page.css
@@ -29,7 +29,7 @@
     padding:3px;
   }
    header{
-    height: justify;
+    height: auto;
     width: auto;  
     background-color:#76323F;
     color:lightgrey;
@@ -111,8 +111,12 @@
     margin: 10px;
     text-align: center;
   }
+  .card-container h3{
+    color:grey
+  }
 
   h3 {
+    /* color:grey; */
     font-size: 22px; /* Adjust font size for readability */
     margin-bottom: 10px;
   }
@@ -232,18 +236,23 @@
     align-items: flex-start; /* Align items to the start of the card */
     width: 100%;            /* Make each card take full width of the container */
     max-width: 1200px;      /* Set a maximum width for larger screens */
-    background-color: #fff; /* White background for contrast */
+    background-color: #93b4cd;/* White background for contrast */
     border-radius: 8px;
     overflow: hidden;
     box-shadow: 0px 2px 4px rgba(0,0,0,0.2); /* Soft shadow for depth */
     margin-bottom: 20px;    /* Space between cards */
     padding: 16px;          /* Padding inside the card */
   }
+.card:hover{
+  transform: scale(1.1);
+  background-color: #6a9b69;
+}
 
   .card img {
     width: 150px;           /* Set a fixed width for the image */
-    height: auto;           /* Maintain aspect ratio */
-    margin-right: 16px;     /* Space between image and text */
+    height: 150px;           /* Maintain aspect ratio */
+    margin-right: 16px;  
+    border: 1px solid #000;
 
   }
 
@@ -254,10 +263,11 @@
   .card-content h3 {
     font-size: 24px;        /* Font size for heading */
     margin-bottom: 8px;
+    color:#fff;
   }
 
   .card-content p {
-    color: #666;            /* Dark gray color for text */
+    color: #1a1919;            /* Dark gray color for text */
     font-size: 14px;        /* Font size for paragraph */
     line-height: 1.5;       /* Line height for readability */
   }
