--- a/views/Home-page.ejs
+++ b/views/Home-page.ejs
@@ -6,7 +6,8 @@
         <link
             rel="stylesheet"
             type="text/css"
-            href="/Pages/Home-page.css"
+            href="/styleSheets/Home-page.css"
+
         />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
