--- a/views/NGO-page.ejs
+++ b/views/NGO-page.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NGOs</title>
-    <link rel="stylesheet" type="text/css" href="/Pages/NGO-page.css" />
+    <link rel="stylesheet" type="text/css" href="/styleSheets/NGO-page.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
