--- a/views/NGO-page.ejs
+++ b/views/NGO-page.ejs
@@ -117,7 +117,7 @@
             </div>
         </footer>
     </div>
-    <script src="/Pages/NGO-page.js"></script>
+    <script src="/javaScripts/NGO-page.js"></script>
 </body>
 
 </html>
