--- a/views/Home-page.ejs
+++ b/views/Home-page.ejs
@@ -173,5 +173,5 @@
             </footer>
         </div>
     </body>
-    <script src="/Pages/Home-page.js""></script>
+    <script src="/javaScripts/Home-page.js""></script>
 </html>
