--- a/Public/styleSheets/NGO-page.css
+++ b/Public/styleSheets/NGO-page.css
@@ -115,7 +115,7 @@ padding: 2px 10px;
 }
 .card:hover{
   transform: scale(1.1);
-  background-color: #6a9b69;
+  background-color:#6a9b69
 }
 
 .card-content p {
