--- a/views/Banquets-page.ejs
+++ b/views/Banquets-page.ejs
@@ -107,6 +107,6 @@
     
         </div>
         </body>
-        <script type="text/javascript" src="/javaScripts/Banq-page.js"></script>
+        <script type="text/javascript" src="/javaScripts/Banquet-page.js"></script>
         </html>
     
