--- a/views/Home-page.ejs
+++ b/views/Home-page.ejs
@@ -36,7 +36,7 @@
                         <img src="https://s01.sgp1.cdn.digitaloceanspaces.com/article/163815-ojokocrlio-1631170753.jpeg" alt="Slide A" />
                     </div>
                     <div class="carousel-slide">
-                        <img src="/images/image2.jpeg" alt="Slide B" />
+                        <img src="./Public/Images/image2.jpeg" alt="Slide B" />
                     </div>
                 </div>
                 <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
