--- a/Public/styleSheets/About-Us-page.css
+++ b/Public/styleSheets/About-Us-page.css
@@ -94,6 +94,7 @@ body {
     align-items: center;    /* Center align items horizontally */
     width: 85%;
     height: 100vh;
+    position: absolute;
     margin: auto;
     background: url('https://sevalaya.org/wp-content/uploads/2021/07/Gudalur-food-distribution-Flood-relief-685x296.jpg');
     background-size: 100% 100%; /* Cover the entire section */
@@ -140,6 +141,7 @@ body {
 /* Footer Styles */
 footer {
     background-color: #76323F;
+    position: relative;
     padding: 10px 0;
     display: flex;
     flex-direction: column;
