--- a/Public/styleSheets/About-Us-page.css
+++ b/Public/styleSheets/About-Us-page.css
@@ -93,11 +93,9 @@ body {
     flex-direction: column; /* Stack items vertically */
     align-items: center;    /* Center align items horizontally */
     width: 85%;
-    height: 100vh;
-    position: relative;
     margin: auto;
-    background: url('https://sevalaya.org/wp-content/uploads/2021/07/Gudalur-food-distribution-Flood-relief-685x296.jpg');
-    background-size: 100% 100%; /* Cover the entire section */
+    background: url('https://sevalaya.org/wp-content/uploads/2021/07/Gudalur-food-distribution-Flood-relief-685x296.jpg') no-repeat center center;
+    background-size: cover; /* Cover the entire section */
     padding: 35px; /* Adjust padding if needed */
     color: white; /* Ensure text color contrasts with background */
 }
@@ -141,7 +139,6 @@ body {
 /* Footer Styles */
 footer {
     background-color: #76323F;
-    position: absolute;
     padding: 10px 0;
     display: flex;
     flex-direction: column;
