--- a/views/About-Us-page.ejs
+++ b/views/About-Us-page.ejs
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>About us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="/styleSheets/About-Us-page.css">
+    <link rel="stylesheet" type="text/css" href="/styleSheets/About-US-page.css">
   </head>
   <body>
     <div class= "main">
@@ -14,16 +14,18 @@
       <nav class="nav">
           <div class="list">
           <ul>
-            <li><a href="/">HOME</a></li>
-            <li><a href="/profile">PROFILE</a></li>
-            <li><a href="/ngos">NGOs</a></li>
-            <li><a href="/banquets">BANQUETS</a></li> 
-            <li><a href="/about">ABOUT US</a></li>
+              <li><a href="/">HOME</a></li>
+              <li><a href="/profile">PROFILE</a></li>
+              <li><a href="/ngos">NGOs</a></li>
+              <li><a href="/banquets">BANQUETS</a></li>
+              <li><a href="/about">ABOUT US</a></li>
           </ul>
           </div>
       </nav>
     </header>
-       <h1>About Us</h1>
+        <h1 style="color:black; font-weight: bolder; font-size: 30px;"></h1>
+        <div class="heading">
+            <h1>About Us</h1>
         </div>
         <section class="about-us">
             <!-- <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRolOaECcMqQhhBjpOtWbTRBU-g_57ldBIcUQ&s"> -->
@@ -48,7 +50,7 @@
             
         </div>
         </section>
-<footer>
+      <footer>
           <div class="container">
               <div class="footer-content">
                   <h3>Contact Us</h3>
@@ -83,4 +85,5 @@
 
     </div>
     </body>
+    <script type="text/javascript" src="Pages/AboutUS-page.js"></script>
     </html>
